--- a/css/base.css
+++ b/css/base.css
@@ -5,7 +5,7 @@
     --cor-primaria-hover: #834de8;
     --cor-cinza-escura: #29272a;
     --cor-cinza-clara: #ededed;
-
+    --cor-roxa-clara: #BCA2ED
 }
 body {
     font-family: 'Roboto', sans-serif;
